--- a/scss/components/_cart-icon.scss
+++ b/scss/components/_cart-icon.scss
@@ -1,8 +1,15 @@
 // scss/components/_cart-icon.scss
+
 .cart-icon-container {
     position: relative;
     cursor: pointer;
     margin-left: 20px;
+
+    // En móvil, le damos un margen a la derecha para separarlo del menú hamburguesa
+    @include breakpoint(768px) {
+        margin-left: 0; 
+        margin-right: 20px;
+    }
 
     .fa-shopping-cart {
         font-size: 1.5em;
@@ -18,7 +25,7 @@
         width: 22px;
         height: 22px;
         border-radius: 50%;
-        @include flex-center; // ¡Reutilizando nuestro mixin!
+        @include flex-center;
         font-size: 0.8em;
         font-weight: bold;
         border: 2px solid $color-blanco;
